# scuwl

./: .gitignore  README.md  setup.cfg
scuwl_petebuffon/: scuwl.py
src/: .gitignore  LICENSE  README.md  setup.cfg
src/scuwl_petebuffon/: .gitignore  scuwl.py
