[metadata]
name = scuwl
version = 1.0
author = Pete Buffon
author_email = pabuffon@gmail.com
description = SCuWl, Simple custom wordlist generator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petebuffon/scuwl
project_urls =
	Bug Tracker = https://github.com/petebuffon/scuwl/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8
install_requires =
  aiohttp >= 3.8.3
  bs4 >= 0.0.1
  lxml >= 4.9.1

[options.entry_points]
console_scripts =
  scuwl = scuwl_petebuffon.scuwl:main
